--- a/resources/cmake_templates/vcpkg_completion.zsh.in
+++ b/resources/cmake_templates/vcpkg_completion.zsh.in
@@ -1,4 +1,4 @@
-export VCPKG_ROOT=@vcpkg_SOURCE_DIR@
+export VCPKG_ROOT=$(readlink -f @vcpkg_SOURCE_DIR@)
 export PATH=@CMAKE_BINARY_DIR@:$PATH
 _vcpkg_completions()
 {
